# gcfl-sim

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: autoformat.yml  build_wheels.yml  ci.yml  docker.yml
accel/: numba_kernels.py
accel/cpp/: CMakeLists.txt  fast_kernels.cpp  pybind_module.cpp
configs/: base.yaml
configs/sweeps/: alpha_pi.yaml  boundary.yaml
docker/: Dockerfile  Dockerfile.cuda  docker-compose.yml
examples/: python_api.py
examples/plugins/: README.md  my_aggregator.py
scripts/: benchmark.py  make_figs.py  profile.sh  quickstart.sh
src/gcfl/: __init__.py  dynamics.py  engine.py  io.py  metrics.py  params.py  registry.py  rng.py  run.py  sweep.py  types.py
src/gcfl/aggregates/: __init__.py  mean.py  median.py  sorted_weighted.py  trimmed.py
src/gcfl/backends/: __init__.py  dask_backend.py  ray_backend.py  reference.py  scale.py
src/gcfl/mechanisms/: __init__.py  u_orth_penalty.py
src/gcfl/signals/: __init__.py  affine.py
src/gcfl/utils/: logging.py  profiling.py  version.py
tests/perf/: test_ref_vs_scale.py
tests/property/: test_invariants.py
tests/unit/: test_aggregates.py  test_engine.py  test_mechanisms.py  test_rng.py
